<resources>
    <string name="app_name">proyecto-firebase</string>
    <string name="esUsuario">Es Usuario? Login</string>
    <string name="name">Name</string>
    <string name="user">UserName</string>
    <string name="pass">Password</string>
    <string name="email">Email</string>
    <string name="Login">Login</string>
    <string name="registrarse">Registrarse</string>
    <string name="no">No estas Registrado? registrate</string>
    <string-array name="genres_array">
        <item>Todos</item>
        <item>Drama</item>
        <item>Comedia</item>
        <item>Acción</item>
        <item>Ciencia Ficción</item>
        <item>Otros</item>
    </string-array>
    <string-array name="genress_array">
        <item>Drama</item>
        <item>Comedia</item>
        <item>Acción</item>
        <item>Ciencia Ficción</item>
        <item>Otros</item>
    </string-array>
    <string name="title_hint">Título de la serie</string>
    <string name="seasons_hint">Temporadas vistas</string>
    <string name="total_seasons_hint">Número total de temporadas</string>
    <string name="date_hint">Fecha (dd/MM/yyyy)</string>
    <string name="completed_text">Completada</string>
    <string name="edit_series_title">Editar Serie</string>
    <string name="update_button_text">Actualizar Serie</string>
    <string name="add_series_title">Añadir Serie</string>
    <string name="add_button_text">Añadir Serie</string>
</resources>