<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSeriesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        android:background="@drawable/popcorn">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_series_title"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:paddingBottom="8dp" />

                <EditText
                    android:id="@+id/titleInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/title_hint"
                    android:background="@drawable/borde_datos"
                    android:padding="8dp"
                    android:layout_marginTop="8dp" />

                <!-- Spinner para los géneros -->
                <Spinner
                    android:id="@+id/genreSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="@drawable/borde_datos"
                    android:padding="8dp"
                    android:layout_marginTop="8dp" />

                <EditText
                    android:id="@+id/seasonsInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/seasons_hint"
                    android:inputType="number"
                    android:background="@drawable/borde_datos"
                    android:padding="8dp"
                    android:layout_marginTop="8dp" />

                <EditText
                    android:id="@+id/totalSeasonsInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/total_seasons_hint"
                    android:inputType="number"
                    android:background="@drawable/borde_datos"
                    android:padding="8dp"
                    android:layout_marginTop="8dp" />

                <EditText
                    android:id="@+id/dateInput"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:hint="@string/date_hint"
                    android:focusable="false"
                    android:background="@drawable/borde_datos"
                    android:padding="8dp"
                    android:layout_marginTop="8dp" />

                <CheckBox
                    android:id="@+id/completedCheckbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/completed_text"
                    android:layout_marginTop="16dp" />

                <Button
                    android:id="@+id/updateSeriesButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/update_button_text"
                    android:backgroundTint="@color/colorApp"
                    android:textColor="@color/white"
                    android:layout_marginTop="16dp" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

